--- a/index.html
+++ b/index.html
@@ -14,6 +14,33 @@
         <i class="fa fa-repeat"></i>
    </div>
     <span class="clock">0 min 0 sec</span>
+	<div id="popup1" class="overlay">
+            <div class="popup">
+                <h2>Congratulations !!!!!</h2>
+                <a class="close" href=# >Ã—</a>
+                <div class="content-1">
+                    Congratulations you're a winner ðŸŽ‰ðŸŽ‰
+                </div>
+                <div class="content-2">
+                    <p>in <span id=totalTime> </span> </p>
+                </div>
+                <button id="play-again"onclick="playAgain()"> Play again ðŸ˜„</a></button>
+            </div>
+		</div>
+		
+		<div id="popdown" class="overlay">
+		<div class="popdown">
+			<h2>Opps !!!!!</h2>
+			<a class="close" href=# >Ã—</a>
+			<div class="content-3">
+				You lost!!! why????
+			</div>
+			<div class="content-2">
+				<p>in <span id=totalTime> </span> </p>
+			</div>
+			<button id="play-again"onclick="playAgain()"> Play again ðŸ˜„</a></button>
+		</div>
+	</div>
 
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
