--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
 		<div id="popdown" class="overlay">
 		<div class="popdown">
 			<h2>Opps !!!!!</h2>
-			<a class="close" href=# >Ã—</a>
+			<a class="close" href=# ></a>
 			<div class="content-3">
-				You lost!!! why????
+				You lost!!! because you were hit 5 times.
+				Maybe you try again:)
 			</div>
 			<div class="content-2">
 				<p>in <span id=totalTime> </span> </p>
