--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h2>Congratulations !!!!!</h2>
                 <a class="close" href=# >Ã—</a>
                 <div class="content-1">
-                    Congratulations you're a winner ðŸŽ‰ðŸŽ‰
+                    Congratulations you're a winner
                 </div>
                 <div class="content-2">
                     <p>in <span id=totalTime> </span> </p>
